--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -5,6 +5,7 @@
     android:id="@+id/nav_graph"
     app:startDestination="@id/mainFragment">
 
+    <!-- MainFragment -->
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.example.navigationcomponent.MainFragment"
@@ -32,6 +33,8 @@
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"/>
     </fragment>
+
+    <!-- ChooseRecipientFragment -->
     <fragment
         android:id="@+id/chooseRecipientFragment"
         android:name="com.example.navigationcomponent.ChooseRecipientFragment"
@@ -39,13 +42,28 @@
         tools:layout="@layout/fragment_choose_recipient" >
         <action
             android:id="@+id/action_chooseRecipientFragment_to_specifyAmountFragment"
-            app:destination="@id/specifyAmountFragment" />
+            app:destination="@id/specifyAmountFragment"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"/>
     </fragment>
+
+    <!-- ConfirmationFragment -->
     <fragment
         android:id="@+id/confirmationFragment"
         android:name="com.example.navigationcomponent.ConfirmationFragment"
         android:label="fragment_confirmation"
-        tools:layout="@layout/fragment_confirmation" />
+        tools:layout="@layout/fragment_confirmation">
+
+        <argument android:name="recipient"
+        android:defaultValue="None"/>
+
+        <argument android:name="amount"
+        app:argType="com.example.navigationcomponent.Money"/>
+    </fragment>
+
+    <!-- SpecifyAmountFragment -->
     <fragment
         android:id="@+id/specifyAmountFragment"
         android:name="com.example.navigationcomponent.SpecifyAmountFragment"
@@ -53,13 +71,21 @@
         tools:layout="@layout/fragment_specify_amount" >
         <action
             android:id="@+id/action_specifyAmountFragment_to_confirmationFragment"
-            app:destination="@id/confirmationFragment" />
+            app:destination="@id/confirmationFragment"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"/>
     </fragment>
+
+    <!-- ViewBalanceFragment -->
     <fragment
         android:id="@+id/viewBalanceFragment"
         android:name="com.example.navigationcomponent.ViewBalanceFragment"
         android:label="fragment_view_balance"
         tools:layout="@layout/fragment_view_balance" />
+
+    <!-- ViewTransactionFragment -->
     <fragment
         android:id="@+id/viewTransactionFragment"
         android:name="com.example.navigationcomponent.ViewTransactionFragment"
